# nets

./: .flake8  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  add_to_pythonpath.sh  environment-cpu.yml  environment-gpu.yml  environment.yml  pyproject.toml  setup.cfg  setup_env.sh
.github/workflows/: pre-commit.yml  python-package-conda.yml
TODO_package_name/: __init__.py
experiments/in_context_learning/: launcher_local.py  launcher_slurm.py
nets/: __init__.py
nets/datasets/: __init__.py  base.py  parity.py  symbolic.py
nets/experiments/: __init__.py
nets/experiments/analyzable_online_sgd/: __init__.py  launcher_local.py
nets/experiments/in_context_learning/: __init__.py  launcher_local.py  launcher_slurm.py
nets/launch/: __init__.py  analyze.py  configs.py  hparams.py  submit.py
nets/models/: __init__.py  feedforward.py  teacher.py  transformers.py
nets/samplers/: __init__.py  base.py  dirichlet_multinomial.py
nets/simulators/: __init__.py  in_context_learning.py  online_sgd.py  teacher_student.py
