[metadata]
name = nets
version = attr: nets.__version__
author = Erin Grant
url = "https://github.com/eringrant/nets"
description = "Equinox (JAX) neural nets."
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    jax>=0.4.8
    equinox>=0.10.2

[options.packages.find]
include = nets*
