[metadata]
name = TODO_package_name
version = attr: TODO_package_name.__version__
author = Erin Grant
url = "https://github.com/eringrant/TODO_package_name"
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    pre-commit
    jupyter
    ipdb
    ipython
    pandas>=2.0
    matplotlib
    numpy
    seaborn
    tqdm

[options.packages.find]
include = TODO_package_name*
