[metadata]
name = nets
version = attr: nets.__version__
author = Erin Grant
url = "https://github.com/eringrant/nets"
description = "Equinox (JAX) neural nets."
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy>=1.24.3
    nptyping>=2.5.0

    dill>=0.3.6
    pandas>=2.0.0
    seaborn>=0.13.0
    tqdm>=4.65.0

    jax>=0.4.13 
    jaxlib>=0.4.13
    jaxtyping>=0.2.20

    equinox>=0.11.0
    optax>=0.1.5

[options.packages.find]
include = nets*
